added university policies

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -14,28 +14,33 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-    
-        <div id="left" class="column">
-        <div class="top-left"></div>
-        <div class="bottom"></div>
+    <div id="left" class="column">
+      <div class="top-left"></div>
+      <div class="bottom"></div>
     </div>
     <div id="right" class="column">
-        <div class="top-right"></div>
-        <div class="bottom"></div>
+      <div class="top-right"></div>
+      <div class="bottom"></div>
     </div>
-    
+
     <div class="nav-container">
-       <div style ="font-size: 24px">
-            <a href="../">
-        Critical Computation
+      <div style="font-size: 24px">
+        <a href="../">
+          Critical Computation
         </a>
       </div>
       <div><a href="../syllabus/">syllabus</a></div>
-      <div><a href="https://docs.google.com/document/d/1Ys7vgu9EzaN4TJtlDBwhE9Utso-Mci8hIh_kCjhfsH0/edit#heading=h.dwxd84w1owa" target="blank">schedule</a></div>
+      <div>
+        <a
+          href="https://docs.google.com/document/d/1Ys7vgu9EzaN4TJtlDBwhE9Utso-Mci8hIh_kCjhfsH0/edit#heading=h.dwxd84w1owa"
+          target="blank"
+          >schedule</a
+        >
+      </div>
       <div><a href="../assignment/">assignments</a></div>
       <div><a href="../resource/">resources</a></div>
       <div><a href="../people/">people</a></div>
-          <div><a href="../faq/">faq</a></div>
+      <div><a href="../faq/">faq</a></div>
     </div>
 
     <div class="main-container">
@@ -53,9 +58,7 @@
           <li><a href="10.html">#10 Translation Device</a></li>
         </ul>
       </div>
-      <div id="main-panel">
- 
-      </div>
+      <div id="main-panel"></div>
     </div>
   </body>
 </html>
