--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -34,7 +34,7 @@
       <div><a href="../assignment/">assignments</a></div>
       <div><a href="../resource/">resources</a></div>
       <div><a href="../people/">people</a></div>
-                <div><a href="../faq/">faq</a></div>
+      <div><a href="../faq/">faq</a></div>
     </div>
     <div class="main-container">
       <div id="sub-nav">
@@ -45,15 +45,15 @@
           <li><a href="#section3">Community Agreement</a></li>
           <li><a href="#section4">Land Acknowledgement</a></li>
           <li><a href="#section5">Assessable Assignments</a></li>
-          <li><a href="#section7">Assignment Submissions </a></li>
-          <li><a href="#section7.1">CC Lecture Final Grade Calculation</a></li>
+          <li><a href="#section6">Assignment Submissions </a></li>
+          <li><a href="#section7">CC Lecture Final Grade Calculation</a></li>
           <li><a href="#section8">CC Lab Final Grade Calculation</a></li>
-          <li><a href="#section6">Assignment Rubric</a></li>
-          <li><a href="#section9">Communication Channels</a></li>
-          <li><a href="#section10">Asking Questions</a></li>
-          <li><a href="#section11">Required Tools</a></li>
+          <li><a href="#section9">Assignment Rubric</a></li>
+          <li><a href="#section10">Communication Channels</a></li>
+          <li><a href="#section11">Asking Questions</a></li>
+          <li><a href="#section12">Required Tools</a></li>
           <li>
-            <a href="section7"
+            <a href="#section13"
               >University, College/School, and Program Policies</a
             >
           </li>
@@ -153,8 +153,8 @@
             <a href="https://NewSchool.zoom.us/j/96604778857">Zoom Link</a> pw:
             901560
           </div>
-          
-          <hr class="divider-mobile">
+
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Lan Zhang (she/her)</div>
           <div class="assignment-grid-item">
             zhany016[at]newschool[dot]edu
@@ -166,7 +166,7 @@
             >
             pw: mfadt
           </div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Elena Gold (they/them)</div>
           <div class="assignment-grid-item">
             golde584[at]newschool[dot]edu
@@ -178,12 +178,12 @@
             >
             pw: 111433
           </div>
-          
+
           <div class="assignment-grid-item">Jon Packles (he/him/his)</div>
           <div class="assignment-grid-item">
             jon.packles[at]newschool[dot]edu
           </div>
-          <br>
+          <br />
           <div class="assignment-grid-item"><b>Synchronous Meetings</b></div>
           <div class="assignment-grid-item">
             <b>Thursdays 8-10:00PM (EST)</b>
@@ -205,7 +205,7 @@
             akkaa949[at]newschool[dot]edu
           </div>
           <div class="assignment-grid-item"></div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Cassandra Hradil (she/her)</div>
           <div class="assignment-grid-item">
             hradc987[at]newschool[dot]edu
@@ -404,49 +404,49 @@
           <div class="assignment-grid-item">Assignment #1</div>
           <div class="assignment-grid-item">Lost and Found</div>
           <div class="assignment-grid-item">DUE 9/8</div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Assignment #2</div>
           <div class="assignment-grid-item">Divination Machine</div>
           <div class="assignment-grid-item">DUE 9/15</div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Assignment #3</div>
           <div class="assignment-grid-item">Experimental Clock</div>
           <div class="assignment-grid-item">DUE 9/22</div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Assignment #4</div>
           <div class="assignment-grid-item">Exquisite Corpse</div>
           <div class="assignment-grid-item">DUE 9/29</div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Assignment #5</div>
           <div class="assignment-grid-item">Anti-Surveillance Tool</div>
           <div class="assignment-grid-item">DUE 10/6</div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Assignment #6</div>
           <div class="assignment-grid-item">Experimental Camera</div>
           <div class="assignment-grid-item">DUE 10/13</div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Assignment #7</div>
           <div class="assignment-grid-item">Bitmap Game</div>
           <div class="assignment-grid-item">DUE 11/10</div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Assignment #8</div>
           <div class="assignment-grid-item">Consentful Interface</div>
           <div class="assignment-grid-item">DUE 11/17</div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Assignment #9</div>
           <div class="assignment-grid-item">Data Portrait</div>
           <div class="assignment-grid-item">DUE 12/1</div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Assignment #10</div>
           <div class="assignment-grid-item">Translation Device</div>
           <div class="assignment-grid-item">DUE 12/15</div>
-          <hr class="divider-mobile">
+          <hr class="divider-mobile" />
           <div class="assignment-grid-item">Final Review</div>
           <div class="assignment-grid-item">CC Portfolio</div>
           <div class="assignment-grid-item">DUE 12/18</div>
         </div>
 
-        <div class="block" id="section7">
+        <div class="block" id="section6">
           <h1>
             Assignment Submissions
           </h1>
@@ -477,7 +477,7 @@
           Grades and attendance will be recorded on Canvas.
         </p>
 
-        <div class="block" id="section7.1">
+        <div class="block" id="section7">
           <h1>
             CC Lecture Final Grade Calculation
           </h1>
@@ -532,7 +532,7 @@
           class.
         </p>
 
-        <div class="block" id="section6">
+        <div class="block" id="section9">
           <h1>
             Assignment Rubric
           </h1>
@@ -612,7 +612,7 @@
           </div>
         </div>
 
-        <div class="block" id="section9">
+        <div class="block" id="section10">
           <h1>
             Communication Channels
           </h1>
@@ -663,7 +663,7 @@
           </li>
         </ul>
 
-        <div class="block" id="section10">
+        <div class="block" id="section11">
           <h1>
             Asking Questions
           </h1>
@@ -719,16 +719,13 @@
           </li>
         </ul>
 
-        <div class="block" id="section11">
+        <div class="block" id="section12">
           <h1>
             Required Tools
           </h1>
         </div>
 
         <ul>
-          <li class="bullet">
-            <a href="https://editor.p5js.org/">p5 web editor account</a>
-          </li>
           <li class="bullet">
             <a href="https://glitch.com/">Glitch account</a>
           </li>
@@ -738,6 +735,193 @@
             <a href="https://requests.newschool.edu/cn-vpn/"
               >the New School VPN</a
             >
+          </li>
+        </ul>
+
+        <div class="block" id="section13">
+          <h1>
+            University, College/School, and Program Policies
+          </h1>
+        </div>
+        <h2>
+          Academic Integrity
+        </h2>
+        <p>
+          Compromising your academic integrity may lead to serious consequences,
+          including (but not limited to) one or more of the following: failure
+          of the assignment, failure of the course, academic warning,
+          disciplinary probation, suspension from the university, or dismissal
+          from the university. <br /><br />
+          Students are responsible for understanding the University’s policy on
+          academic honesty and integrity and must make use of proper citations
+          of sources for writing papers, creating, presenting, and performing
+          their work, taking examinations, and doing research. It is the
+          responsibility of students to learn the procedures specific to their
+          discipline for correctly and appropriately differentiating their own
+          work from that of others. The full text of the policy, including
+          adjudication procedures, is found at
+          http://www.newschool.edu/policies/
+          <br /><br />
+          Resources regarding what plagiarism is and how to avoid it can be
+          found on the Learning Center’s website:
+          http://www.newschool.edu/university-learning-center/student-resources/
+          <br /><br />
+          Intellectual Property Rights:
+          http://www.newschool.edu/provost/accreditation-policies/
+          <br /><br />
+          Grading Policies:
+          http://www.newschool.edu/registrar/academic-policies/
+        </p>
+        <h2>
+          Participation/ Attendance/ Expectations for the Remote Learning
+          Environment
+        </h2>
+        <p>
+          Participation is an essential part of class and includes: keeping up
+          with reading, contributing meaningfully to class discussions, active
+          participation in group work, and attending synchronous sessions
+          regularly and on time. Students are expected to keep up with class
+          activities and requirements each week.
+        </p>
+
+        <h2>
+          Course Policies
+        </h2>
+
+        <h3>
+          Remote Learning Environment Expectations
+        </h3>
+        <p>
+          In order to make the most out of remote learning, we need everyone to
+          be fully present and ready to engage during synchronous sessions. To
+          your best ability, get rid of all the possible distractions in your
+          indoor environment such as noise and traffic. Be prepared to zoom into
+          every class from an indoor space with strong WiFi. Please don’t zoom
+          into a class from your phone while you’re out and about.
+          <br /><br />
+          Keeping your camera on during class is required for creating a present
+          and aware community. If you have special reasons as to why you need to
+          keep your camera off please email your instructor to make
+          arrangements.
+          <br /><br />
+          Consider using a task tracking method like sticky notes on a wall, a
+          Notion, Trello, Airtable, or other task tracking application to
+          organize your to-do list. It’s difficult to stay motivated when you
+          work remotely sometimes, so look for tools that would help make it
+          easier for you.
+          <br /><br />
+          More information can be found on
+          <a
+            href="https://docs.google.com/document/d/1-lnQnBUN1-06B8MCi4ic6dhlWpGFD4uFYCeYB9oKX0c/edit?usp=sharing"
+            >CC Lecture + Lab Remote Learning Tips</a
+          >. <br /><br />
+        </p>
+
+        <h3>Recording Synchronous Sessions</h3>
+        <p>
+          We will be recording our “Open Projector” sessions over Zoom. We will
+          be doing this to document student work and for our own assessment and
+          evaluation of learning outcomes. The video will not be shared outside
+          of the class without explicit permission from the student(s).
+        </p>
+        <h3>
+          Responsibility
+        </h3>
+        <p>
+          Students are responsible for all assignments, even if they are absent.
+          Late papers, failure to complete the readings assigned for class
+          discussion, and lack of preparedness for in-class discussions and
+          presentations will jeopardize your successful completion of this
+          course.
+        </p>
+        <h3>Delays</h3>
+        <p>
+          In rare instances, instructors may be delayed for synchronous
+          sessions. If they have not joined by the time the session is scheduled
+          to start, you must wait a minimum of thirty minutes for their arrival.
+          In the event that they will miss a session entirely, an announcement
+          will be made on Canvas indicating any work that should be completed
+          before the next synchronous session..
+        </p>
+        <h3>Open Source Policy</h3>
+        <p>
+          You are encouraged to help each other out with programming, but unless
+          otherwise specified you must turn in your own work. Initially it is
+          expected that you will be coding from scratch without re-using or
+          modifying other people’s code. After midterm reuse and modification of
+          code will be allowed, but only under very strict terms.
+          <br /><br />
+          Copying/pasting and reusing code is a key part of the programming
+          process, especially while learning. You often learn best by modifying
+          working examples rather than starting from scratch. We stand on the
+          shoulders of giants; that’s the essence of the open-source philosophy.
+          However, there is a very important caveat: any open-source code you
+          borrow and/or modify must be labeled as such. That is, you must
+          include, in your work, the name of the author, the source URL, the
+          types of open-source license, and you must make clear which lines of
+          code are not yours. If you fail to do this, you will fail the class.
+          It is very, very easy to get this right, though, so if you take a
+          moment’s time to label your work correctly, you will not have a
+          problem. Just be diligent and honest.
+        </p>
+
+        <h2>
+          Student Course Ratings (Course Evaluations)
+        </h2>
+        <p>
+          During the last two weeks of the semester, students are asked to
+          provide feedback for each of their courses through an online survey.
+          They cannot view grades until providing feedback or officially
+          declining to do so. Course evaluations are a vital space where
+          students can speak about the learning experience. It is an important
+          process which provides valuable data about the successful delivery and
+          support of a course or topic to both the faculty and administrators.
+          Instructors rely on course rating surveys for feedback on the course
+          and teaching methods, so they can understand what aspects of the class
+          are most successful in teaching students, and what aspects might be
+          improved or changed in future. Without this information, it can be
+          difficult for an instructor to reflect upon and improve teaching
+          methods and course design. In addition, program/department chairs and
+          other administrators review course surveys. Instructions are available
+          online at
+          http://www.newschool.edu/provost/course-evaluations-student-instructions.pdf.
+        </p>
+
+        <h3>
+          Resources
+        </h3>
+        <p>
+          The university provides many resources to help students achieve
+          academic and artistic excellence. These resources include:
+        </p>
+        <ul>
+          <li class="bulet">
+            University Libraries and Archives: http://library.newschool.edu (See
+            also Reserves)
+          </li>
+          <li class="bulet">
+            University Learning Center: http://www.newschool.edu/learning-center
+          </li>
+          <li class="bulet">
+            Student Disability Services:
+            www.newschool.edu/student-disability-services/
+          </li>
+          <li class="bulet">
+            If you are a student with a disability/disabled student, or believe
+            you might have a disability that requires accommodations, please
+            contact the Student Disability Services (SDS) at
+            studentdisability@newschool.edu, or 212-229-5626, to coordinate all
+            reasonable accommodation requests.
+          </li>
+          <li class="bulet">
+            The New School Food Assistance: For more information on food
+            assistance and additional resources, please click on the link below:
+            https://www.newschool.edu/student-support-crisis-management/student-food-pantry-faq/
+          </li>
+          <li class="bulet">
+            Health and Wellness: For information about services and support
+            available to New School students please click on the link below:
+            https://www.newschool.edu/campus-community/health-wellness-support/
           </li>
         </ul>
       </div>
