--- a/assignment/5.html
+++ b/assignment/5.html
@@ -31,6 +31,7 @@
       <div><a href="../assignment/">assignments</a></div>
       <div><a href="../resource/">resources</a></div>
       <div><a href="../people/">people</a></div>
+      <div><a href="../faq/">faq</a></div>
     </div>
 
     <div class="main-container">
